# simple-chat-app

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs
static/: index.html  script.js  style.css
