[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }

[dev-dependencies]
rand = "0.8"


#[dependencies.rocket_contrib]
#version = "0.4.10"
#default-features = false
#features = ["diesel_sqlite_pool"]




[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_sqlite"]